# Qojl

./: pyproject.toml
Qojl/: __init__.py
